--- a/Task/style.css
+++ b/Task/style.css
@@ -1,36 +1,47 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+
 * {
   padding: 0;
   margin: 0;
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Poppins", sans-serif;
+}
+
+header {
+  background-image: url("Shopping-mall.jpg");
+  background-size: cover;
+  background-position: center;
+  /* width: 100vw; */
+  height: 320px;
+  position: relative;
 }
 
 nav {
   display: flex;
   justify-content: flex-end;
-  background-color: rgba(0, 0, 0, 0.7);
-  /* width: calc(100% - 8px); */
   align-items: center;
   padding: 6px 20px;
+  background: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(10px);
 }
 
 i {
-    position: relative;
+  position: relative;
 }
 
-span {
-    color: white;
-    position: absolute;
-    font-size: 10px;
-    background-color: #000000;
-    border-radius: 50px;
-    padding: 2px;
-    top: 10px;
-    right: 191px;
-    z-index: 1;
+.cart {
+  color: white;
+  position: absolute;
+  font-size: 8px;
+  background-color: #000000;
+  border-radius: 50%;
+  padding: 0px 4px;
+  top: 11px;
+  right: 206px;
+  z-index: 1;
 }
 
 i,
@@ -51,95 +62,65 @@ p {
   color: black;
 }
 
-.img {
+/* .img {
   background-image: url("Shopping-mall.jpg");
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
-  /* width: 100vw; */
-  height: 200px;
+  height: 400px;
   position: relative;
-}
+} */
 
 h1 {
   position: absolute;
-  top: 50%;
-  left: 10%;
+  top: 25%;
+  left: 100px;
   transform: translateY(-50%);
-  font-size: 50px;
+  font-size: 66px;
   color: black;
 }
 
-/* .search {
-  display: flex;
-  position: absolute;
-  top: 240px;
-  left: 310px;
-}
-
-.find {
-  background-color: #ffffff;
-  border-radius: 25px;
-  color: gray;
-  width: 660px;
-  height: 20px;
-  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.1);
-  padding: 5px;
-  padding: 10px 15px;
-}
-
-.btn {
-  background-color: #000000;
-  color: gainsboro;
-  border-radius: 25px;
-  border: none;
-  width: 80px;
-  height: 40px;
-  padding: 10px 20px;
-  cursor: pointer;
-}
-
-.btn:hover {
-  background-color: #444;
-} */
+h1 .white {
+  color: white;
+  font-weight: 100;
+} 
 
 .search-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: -10px;
-    position: absolute;
-    left: 25%;
-    top: 230px;
-  }
-  
-  .search-input {
-    width: 600px;
-    padding: 12px 15px;
-    border: none;
-    border-radius: 25px 0 0 25px; 
-    outline: none;
-    font-size: 14px;
-    color: #7a7a7a; 
-    background-color: #f5f5f5;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .search-button {
-    padding: 12px 20px;
-    border: none;
-    border-radius: 25px ;
-    background-color: #000; 
-    color: #fff;
-    font-size: 14px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    transform: translateX(-10px);
-  }
-  
-  .search-button:hover {
-    background-color: #333; 
-  }
+  position: absolute;
+  left: 16%;
+  top: 39%;
+}
+
+.search-input {
+  width: 864px;
+  height: 60px;
+  padding: 12px 42px;
+  border: none;
+  border-radius: 30px 0 0 30px;
+  outline: none;
+  font-size: 20px;
+  color: #7a7a7a;
+  background-color: #f5f5f5;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.search-button {
+  width: 187px;
+  height: 60px;
+  padding: 12px 40px;
+  border: none;
+  border-radius: 30px;
+  background-color: #000;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease; 
+  transform: translateX(-26px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.search-button:hover {
+  background-color: #333;
+}
 
 .container {
   display: flex;
@@ -150,91 +131,294 @@ h1 {
 
 h2 {
   padding-top: 60px;
-  padding-left: 30px;
+  padding-left: 40px;
   color: gray;
 }
 
 .items {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #f9f9f9;
-  border-radius: 15px;
-  padding: 15px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  width: 220px;
+  position: relative;
+  width: 200px;
+  border-radius: 10px;
+  font-family: "Poppins", sans-serif;
+  margin-right: 22px;
 }
 
-img {
-  object-fit: cover;
-  background-repeat: no-repeat;
+.items img {
   width: 198px;
   height: 203px;
+  object-fit: cover;
+  object-position: top;
+  display: block;
   margin: 20px;
+  margin-right: 20px;
   border-radius: 15px;
+}
+
+.items .number {
+  position: absolute;
+  top: 18px;
+  left: 20px;
+  color: #000;
+  font-size: 18px;
+  padding: 5px 8px;
+}
+
+.items .overlay {
+  position: absolute;
+  bottom: 67px;
+  left: 20px;
+  width: 198px;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  padding: 10px;
+  font-size: 14px;
+  border-radius: 0 0 15px 15px;
 }
 
 .btn2 {
-  margin-left: 4px;
+  margin-left: 20px;
   width: 198px;
   height: 46px;
   background-color: black;
   color: #ffffff;
   border: none;
-  border-radius: 10px;
+  border-radius: 11px;
   cursor: pointer;
+  font-size: 20px;
 }
 
 .btn2:hover {
   background-color: #444;
 }
 
-@media (max-width: 768px) {
-    h1 {
-      font-size: 36px;
-      left: 5%;
-    }
-  
-    .find {
-      width: 90%;
-    }
-  
-    .items {
-      width: 160px;
-    }
-  
-    img {
-      width: 150px;
-      height: 150px;
-    }
+/* @media (max-width: 2560px) and (min-width: 1246px){
+  header {
+    height: 500px;
   }
-  
-  @media (max-width: 480px) {
-    nav {
-      flex-direction: column;
-      padding: 10px;
-    }
-  
-    i,
-    p {
-      font-size: 14px;
-    }
-  
-    h1 {
-      font-size: 24px;
-      left: 5%;
-    }
-  
-    .find {
-      width: 100%;
-    }
-  
-    .items {
-      width: 140px;
-    }
-  
-    img {
-      width: 120px;
-      height: 120px;
-    }
+
+  nav {
+    padding: 20px 32px;
   }
+
+  i, p {
+    font-size: 36px;
+    padding: 18px;
+  }
+
+  h1 {
+    font-size: 88px;
+    left: 71px;
+    top: 283px;
+  }
+
+  span {
+    right: 401px;
+    font-size: 20px;
+    top: 28px;
+    padding: 1px 10px;
+  }
+
+  .search-container {
+    position: absolute;
+    left: 29%;
+    top: 32%;
+  }
+
+  .search-input {
+    width: 840px;
+    padding: 26px 18px;
+    font-size: 30px;
+  }
+
+  .search-button {
+    padding: 26px 18px;
+    font-size: 30px;
+    transform: translateX(-35px);
+    width: 250px;
+    border-radius: 35px;
+  }
+
+  h2 {
+    font-size: 46px;
+  }
+
+  .container {
+    display: flex;
+    overflow-x: scroll;
+    padding: 10px;
+    gap: 10px;
+  }
+
+  .items .overlay {
+    bottom: 60px;
+  }
+
+  .btn2 {
+    font-size: 14px;
+    height: 40px;
+  }
+} */
+
+@media (max-width: 1246px) and (min-width: 1024px){
+  h1 {
+    font-size: 46px;
+    left: 62px;
+  }
+
+  .search-container {
+    left: 21%;
+    top: 42%;
+  }
+}
+
+@media (max-width: 1024px) and (min-width: 768px){
+  h1 {
+    font-size: 46px;
+    left: 62px;
+  }
+
+  .search-container {
+    position: absolute;
+    left: 29%;
+    top: 42%;
+  }
+
+  .search-input {
+    width: 300px;
+  }
+}
+
+@media (max-width: 768px) and (min-width: 480px){
+  h1 {
+    font-size: 40px;
+    left: 54px;
+  }
+
+  .search-container {
+    /* gap: 10px; */
+    align-items: center;
+    top: 42%;
+    left: 30%;
+  }
+
+  .search-input {
+    width: 200px;
+  }
+
+  .search-button {
+    padding: 12px 22px;
+    transform: translateX(-29px);
+  }
+
+  .container {
+    display: flex;
+    overflow-x: scroll;
+    padding: 20px;
+    gap: 30px;
+  }
+
+  .items {
+    width: 160px;
+  }
+
+  img {
+    height: 160px;
+  }
+}
+
+/* Mobile View */
+@media (max-width: 480px) and (min-width: 320px){
+  i,
+  p {
+    font-size: 14px;
+  }
+
+  .cart {
+    right: 188px;
+  }
+
+  h1 {
+    font-size: 33px;
+    left: 45px;
+  }
+
+  .search-container {
+    align-items: center;
+    top: 42%;
+  }
+
+  .search-input {
+    width: 150px;
+    font-size: 14px;
+  }
+
+  .search-button {
+    padding: 12px 22px;
+    font-size: 14px;
+    transform: translateX(-29px);
+  }
+
+  .container {
+    display: flex;
+    overflow-x: scroll;
+    padding: 10px;
+    gap: 10px;
+  }
+
+  .items .overlay {
+    bottom: 60px;
+  }
+
+  .btn2 {
+    font-size: 14px;
+    height: 40px;
+  }
+}
+
+@media (max-width: 320px) {
+  i,
+  p {
+    font-size: 12px;
+  }
+
+  .cart {
+    right: 172px;
+  }
+
+  h1 {
+    font-size: 30px;
+    left: 52px;
+  }
+
+  .search-container {
+    align-items: center;
+    top: 42%;
+  }
+
+  .search-input {
+    width: 120px;
+    font-size: 10px;
+    padding: 8px 15px;
+  }
+
+  .search-button {
+    padding: 8px 12px;
+    font-size: 10px;
+    transform: translateX(-29px);
+  }
+
+  .container {
+    display: flex;
+    overflow-x: scroll;
+    padding: 20px;
+  }
+
+  .items .overlay {
+    bottom: 60px;
+  }
+
+  .btn2 {
+    font-size: 14px;
+    height: 40px;
+  }
+}
